plugins {
    id 'java-library'
    id 'java'
    id 'maven-publish'
    id 'signing'
}

import org.gradle.jvm.toolchain.JavaLanguageVersion
import org.gradle.api.tasks.bundling.Jar

// Carrega propriedades do projeto (versão)
def props = new Properties()
file("src/main/resources/konduto.properties").withInputStream { props.load(it) }

group = 'com.konduto.sdk'
version = props["version"]

// Configuração da Toolchain Java
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withJavadocJar()
}

// Configuração dos sourceSets
sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
        resources {
            srcDirs = ['src/test/resources']
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.9.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'com.github.tomakehurst:wiremock-jre8:3.0.1'
}

// Configuração do compilador Java para mostrar avisos de depreciação
tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:deprecation"
}

// Tarefa para criar o JAR de código fonte
tasks.register('sourcesJar', Jar) {
    from sourceSets.main.allJava
    archiveClassifier.set("sources")
}

// Configuração do JAR principal
jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Configuração de Publicação para Maven Central
publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = 'java-sdk'
            from components.java

            artifact tasks.named('sourcesJar')

            // Configuração POM
            pom {
                name = 'Konduto\'s Java SDK'
                description = 'Easily integrate with Konduto (https://konduto.com), a fraud prevention service.'
                url = 'https://konduto.com'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = 'danilo.carmo'
                        name = 'Danilo Carmo'
                        email = 'danilo.carmo@boavistascpc.com.br'
                    }
                }
                scm {
                    connection = 'scm:git:https://github.com/konduto/java-sdk.git'
                    developerConnection = 'scm:git:https://github.com/konduto/java-sdk.git'
                    url = 'https://github.com/konduto/java-sdk'
                }
            }
        }
    }
    // Repositórios de destino (Sonatype OSSRH/Nexus)
    repositories {
        maven {
            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
            credentials {
                // CORREÇÃO: Lê diretamente das propriedades do projeto (gradle.properties)
                username = project.property('ossrhUsername')
                password = project.property('ossrhPassword')
            }
        }
    }
}

// Configuração do Javadoc
tasks.named('javadoc', Javadoc) {
    if (JavaVersion.current().isJava9Compatible()) {
        options.addBooleanOption('html5', true)
    }
}

afterEvaluate {
    signing {
        def isSigningConfigured = project.hasProperty('signing.keyId') && project.hasProperty('signing.password')

        if (isSigningConfigured) {
            useGpgCmd()
            sign publishing.publications.mavenJava
        } else {
            logger.warn("Assinatura de artefatos ignorada: as propriedades 'signing.keyId' e/ou 'signing.password' estão faltando.")
        }
    }
}